Added REPLACE_AIR PlaceMode Option